tests/paczka2/big_fuzzy/57533813.err
Error in line 19: RWKQbdMTA S716 36,5
Error in line 21: uKTe A542 75,1
Error in line 16: A584 A584 27,6
Error in line 12: zJioXVTlC A451 20,3
Error in line 15: eUR4N S716 79,1
Error in line 30: A584 S716 1,5
Error in line 39: zJioXVTlC S716 638,8
Error in line 51: zJioXVTlC A451 96,0
Error in line 55: uKTe A584 28,25
Error in line 35: KqGnysJAEPG S716 3,9
Error in line 60: KqGnyµJAEPG A584 77,6
Error in line 58: KqGnysJAEPG A584 47,9
Error in line 56: eUR4N S716 1,7
Error in line 70: RWKQbdMTA S716 60,8
Error in line 61: KqGnysJAEPG A542 78,0
Error in line 73: KqGnysJAEPG A451 20,7
Error in line 45: A584 A542 34,4
Error in line 87: CdBRV7Cx4yn A584 106,9
Error in line 77: zJioXVTlC A451 87,5
Error in line 107: zJioXVTlC S716 17,1
Error in line 112: RWKQbdMTA A542 -27,3
Error in line 111: KqGnysJAEPG A584 37,8
Error in line 100: CdBRV7Cx4yn A451 23,4
Error in line 110: zJioXVTlC A542 19,6
Error in line 114: eUR4N S716 21,6
Error in line 117: eUR4N A584 2,2
Error in line 121: RWKQbdMTA A542 58,39
Error in line 123: eUR4N S716 64,5
Error in line 122: CdBRV7Cx4yn A584 92,2
Error in line 137: A584 A584 41,2
Error in line 147: uKTe A451 63,5
Error in line 141: A584 S716 34,3
Error in line 154: RWKQbdMTA A584 75,9
Error in line 169: CdBRV7Cx4yn A542 11,8
Error in line 175: uKTe A451 88,7
Error in line 183: uKTe A542 86,7
Error in line 184: KqGnysJAEPG S716 89,5
Error in line 186: uKTe A584 45,0
Error in line 189: uKTe S716 29,3
Error in line 173: RWKQbdMTA A451 88,7
Error in line 177: CdBRV7Cx4yn A451 47,1
Error in line 202: uKTe A451 80,8
Error in line 205: zJioXVTlC A542 51,8
Error in line 193: RWKQbdMTA A584 30,1
Error in line 214: RWKQbdMTA A542 20,6
Error in line 224: uKTe A542 26,8
Error in line 234: uKTe A451 97,0
Error in line 240: CdBRV7Cx4yn S716 85,8
Error in line 247: eR4N A542 9,3
Error in line 239: RWKQbdMTA A542 90,8
